--- a/css/button.css
+++ b/css/button.css
@@ -17,3 +17,50 @@ html {
 	  background: #084461;
 	  color: #fff;
 	}
+
+  .Title {
+      margin: 0;
+      padding: 0;
+      width: 100%;
+      height: 50vw;
+      background: url(../img/serena.jpg) no-repeat 50% 50%;
+      background-attachment: fixed;
+      filter: saturate(50%);
+      background-size: cover;
+      padding-top: 10vw;
+  }
+
+  .Title div.caption {
+    width: 50%;
+    border-radius: 8px;
+    box-shadow: 0 0 32px rgba(0,0,0,0.5);
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+    background-color: rgba(30,30,30, .1);
+    padding-bottom: 20px;
+}
+
+.Title .caption .cap_text {
+    padding: 10px;
+}
+
+.Title .caption h1.mean_cap {
+    font-size: 4vw;
+    color: #ffcce5;
+    text-transform: uppercase;
+    line-height: 5vw;
+    letter-spacing: 2px;
+}
+
+.presentation .for_border {
+    border-top: 2px solid #A9A9A9;
+    width: 5%;
+    align-items: center;
+    margin: auto;
+    margin-bottom: 30px;
+    margin-top: 0px;
+    padding-top: 0px;
+    border-radius: 8px;
+}
